--- a/05.HTML-CSS-Responsive/css/style.css
+++ b/05.HTML-CSS-Responsive/css/style.css
@@ -3,18 +3,32 @@
 .tabs {
 	background-color: #C2CFE2;
 	padding: 0.5em;
-	margin-bottom: 0.5em;
-	margin-top: 0.5em;
+	margin-bottom: 0;
+	margin-top: 1.5em;
 	border: 2px solid #FFF;
 	border-radius: 1.5em 0px 1.5em 0px;
 }
 
-/*#intro {
-	background-image: url(http://placehold.it/960x466);
-	background-repeat: no-repeat;
-}*/
-
 #intro {
+	margin-top: 2px;
 	margin-bottom: 30px;
+}
+
+#intro h1 {
+	padding-top: -2em;
+	padding-right: 1em;
+	color: white;
+	text-shadow: 2px 2px 2px #000;
+	font-style: italic;
+}
+
+#footerblock {
+	background-color: #00a8e6;
+	padding-left: 0.5em;
+	margin-bottom: 0;
+	margin-top: 1.5em;
+	padding: 1em;
+	border: 2px solid #FFF;
+	border-radius: 1.5em 0px 1.5em 0px;
 }
 
