--- a/04.HTML-CSS/css/style.css
+++ b/04.HTML-CSS/css/style.css
@@ -1,4 +1,5 @@
-/* CSS styles for index.html. No CSS frameworks */
+/* Vanilla CSS styles for index.html. No CSS frameworks used */
+
 
 body, div, h1, h2, h3, h4, h5, p, ul, img {
 	margin:0px;
@@ -8,35 +9,49 @@ body, div, h1, h2, h3, h4, h5, p, ul, img {
 
 body {
 	font-family: Arial, sans-serif;
-	background-color: #f4f2e8;
+	background-color: #fff;
 }
 
 .innerbody {
 	width: 900px;
 	margin: 0 auto;
+	border: 1px solid #000;
+	background-color: #f4f2e8;
+}
+
+/* bg-banner created using MS paint*/
+header {
+	padding-top: 40px;
+	margin-bottom: -18px;
+	background-image: url(../images/bg-banner.jpg);
+	background-repeat: repeat-x;
+
 }
 
 #mainlogo {
-	/* needs image logo*/
+	margin-top: -10px;
 }
 
-#mainlogo h1 {
-	padding-top: 40px;
+#mainlogo img, #mainlogo span {
+	display: inline-block;
 }
 
-header {
-	padding-top: 40px;
-	
+#mainlogo span {
+	position: absolute;
+	margin-top: 40px;
+	margin-left: 10px;
+	font-size: 30px;
+	color: #e4dfdf;
 }
 
-/* ck need the divs split this too*/
+
 #subtitle h4 {
 	font-size: 25px;
 	color: #e4dfdf;
 }
 
 #subtitle {
-	float: left;
+
 	padding-left: 120px;
 	padding-top: 20px;
 }
@@ -84,6 +99,8 @@ main h2 {
 main h3 {
 	padding-top: 25px;
 	padding-bottom: 25px;
+	font-weight: bold;
+	font-size: 1.5em;
 }
 
 main p {
@@ -103,21 +120,32 @@ aside {
 	float: left;
 	margin-left: 50px;
 	margin-top: 50px;
-	background-color: #9fa3a8;
-	padding-left: 5px;
+	background-color: #c5c6c9;
+	padding: 5px;
+	padding-bottom: 15px;
 	border: 1px solid #6c6e70;
+	text-align: center;
 }
 
 aside h3 {
-
+	padding-bottom: 5px;
+	color: #036c99;
 }
+
 
 aside ul {
 	list-style: none;
+	padding-bottom: 15px;
+
 }
 
 aside ul a {
+	color: #444040;
+}
 
+aside img {
+	height: 25px;
+	width: 25px;
 }
 
 #submit {
@@ -127,4 +155,5 @@ aside ul a {
 	margin: 10px;
 	padding: 5px;
 	font-size: 20px;
+	margin-bottom: 20px;
 }
